extensions/wikia/CorporatePage/css/CorporateSite.scss
@import "../../../../skins/oasis/css/core/color";
@import "../../../../skins/oasis/css/mixins/clearfix";
@import "../../../../skins/oasis/css/mixins/border-radius";
@import "../../../../skins/oasis/css/mixins/gradient";


.HomeContent {
	border: {
		bottom: solid 1px $color-page-border;
		top: solid 1px $color-page-border;
	}
	margin: {
			left: 10px;
			right: 10px;
			top: 27px;
			bottom: 30px;
	}
	padding: 0 0 22px 29px;

	a {
		color: $color-header-text;
		&:visited, &:active {
			@extend a;
		}
	}

	p {
		font-size: 18px;
		width: 520px;
	}

	h2 {
		border: none;
		padding-top: 9px;
		font-size: 23px;
	}


	// /** the button **/
	span {
		float: right;
		position: relative;
		top: -71px;
		margin-right: 80px;
	}

	.wikia-button {
		font-size: 23px;
		padding: 20px;
	}
}

#HomepageFeature {
	margin-left: 17px;
	border-bottom: 1px solid #FFF;

	#spotlight-slider {
		overflow: hidden;
		position: relative;

		ul {
			list-style: none;
		}

		&.small {
			height: 250px;
			width: 620px;
		}
		&.big {
			height: 423px;
			width: 943px;
		}

		.description {
			bottom: 46px;
			color: #FFF;
			display: none;
			padding: 10px;
			position: absolute;
			left: 7px;
			width: 600px;
			z-index: 99;

			h2 {
				border: none;
				display: block;
				font: {
					size: 24px;
					weight: normal;
				}
				line-height: normal;
				margin-bottom: 3px;
				text-shadow: 0 1px 1px #000;
			}

			p {
				border: none;
				font: {
					size: 16px;
					weight: bold;
				}
				line-height: normal;
				margin: {
					top: 0px;
					bottom: 4px;
				}
				text-shadow: 0 1px 1px #000;
			}
		}

		.spotlight-slider-image {
			background: url(/extensions/wikia/CorporatePage/images/bg.homepage.feature.png) center bottom no-repeat;  /* $wgCdnStylePath */
			position: absolute;
			top: 0;
			overflow: hidden;

			&.small {
				height: 250px;
				width: 620px;
			}
			&.big {
				height: 380px;
				width: 943px;
			}
		}

		p .nav {
			&.small {
				padding: 16px 5px 0;
				position: absolute;
				top: 244px;
				z-index: 100;
			}
			&.big {
				padding: 16px 5px 0;
				position: absolute;
				top: 384px;
				z-index: 100;
			}
		}
		.nav img {
			cursor: pointer;
			opacity: .5;
		}

		&.hub {
			height: 287px;
			.description {
				top: 131px;
			}

			.nav {
				top: 239px;
			}
		}

		// /** image positioning **/
		#spotlight-slider-0 {
			 .spotlight-slider-image {
				left: 0;
			}
			.nav {
				left: 0px;
			}
		}

		#spotlight-slider-1 {
			 .spotlight-slider-image {
				&.big {
					left: 943px;
				}
				&.small {
					left: 620px;
				}
			}
			.nav {
				left: 60px;
			}
		}

		#spotlight-slider-2 {
			.spotlight-slider-image {
				&.big {
					left: 1886px;
				}
				&.small {
					left: 1240px;
				}
			}
			.nav {
				left: 120px;
			}
		}

		#spotlight-slider-3 {
			.spotlight-slider-image {
				&.big {
					left: 2829px;
				}
				&.small {
					left: 1860px;
				}
			 }
			.nav {
				left: 180px;
			}
		}

		// /** 4 icons underneath the big images **/
		.nav {
			padding: {
				top: 16px;
				bottom: 5px;
			}
			position: absolute;
			top: 369px;

			&.selected {
				background: url(/extensions/wikia/CorporatePage/images/misc.wikiaglobal.sprite.png) no-repeat -13px -56px;  /* $wgCdnStylePath */

				img {
					opacity: 1 !important;
				}
			}
		}
	}
}

// /** social links **/
.HomepageLink {
	float: right;
	margin: 3px 0;
	position: relative;
	right: 17px;
	top: -43px;

	.stay-connected {
		display: inline-block;
		float: left;
		font-size: 12px;
		line-height: 30px;
		margin: 0 10px;
	}

	ul {
		float: right;
		margin: 0;
		*float: none; // IE7 - BugId:7023

		li {
			background: url(/extensions/wikia/CorporatePage/images/misc.wikiaglobal.sprite.png) no-repeat;  /* $wgCdnStylePath */
			float: left;
			margin-right: 2px;
			display: inline-block;

			&.facebook {
				background-position: -2px -249px;
			}

			&.blog {
				background-position: -36px -249px;
			}

			&.twitter {
				background-position: -73px -249px;
			}

			a {
				width: 30px;
				height: 30px;
				display: block;
			}
		}
	}
}

	/* @group -Hot Spots */

#wikia-global-hot-spots {
	clear: both;
	float: none;



	h1 {
		margin-bottom: 15px;
	}

	p {
		margin-bottom: 5px;
	}

	ol {
		padding: 0;

		li {
			@include clearfix;
			clear: left;
			border-bottom: solid 1px $color-page-border;
			list-style-type: none;
			padding-top: 8px;

			&:first-child {
				.page-activity-sources {
					margin-top: 29px;
				}
			}

			&:last-child {
				border: none;
			}
		}
	}

	strong {
		font: {
			size: 20px;
			weight: normal;
		}
		line-height: 30px;
		padding: {
			left: 4px;
			right: 4px;
		}
		vertical-align: middle;
	}

	.page-activity-badge {
		color: #FFF;
		float: left;
		height: 26px;
		margin: {
			bottom: 10px;
			right: 4px;
		}
		text-align: right;

		div {
			@include border-radius(5px);
			float: left;
			padding: {
				left: 6px;
				right: 6px;
			}

			span {
				line-height: 28px;
				padding: {
					left: 4px;
					right: 4px;
				}
				font-size: 12px;
				vertical-align: middle;
			}
		}

		.page-activity-level-1 {
			background-color: #C03;
		}
		.page-activity-level-2 {
			background-color: #F90;
		}
		.page-activity-level-3 {
			background-color: #FC0;
		}
		.page-activity-level-4 {
			background-color: #390;
		}
		.page-activity-level-5 {
			background-color: #069;
		}
		.page-activity-level-x {
			background-color: #E0E0E0;
		}
	}

	.page-activity-sources {
		display: block;
		margin-left: 93px;
		width: 190px;
		img {
			position: relative;
			top: -2px;
			vertical-align: middle;
		}
		span {
			color: #666;
			padding-top: 0px;
			clear: right;
			display: block;
			span {
				display: inline;
			}
		}

		.wikia-wiki-link {
			color: #333;
			width: 100px;
			font-size: 12px;
		}

		.head-hide-link {
			clear: both;
			display: block;
			font-weight: bold;
		}

	}

	.hilite {
		.page-activity-badge {
			background: url(/extensions/wikia/MyHome/images/fire.png) repeat-x;  /* $wgCdnStylePath */
			padding-top: 30px;
		}
	}

	.wikia-page-link {
		font: {
			size: 13px;
			weight: bold;
		}
	}

	// /** admin CSS **/
	.toggleContainer {
		margin-top: -16px;
	}
}


.MainArticle {

	p {
		margin: 5px 0px;
	}
	li {
		@extend p;
	}
	dt {
		@extend p;
	}
	dd {
		@extend p;
	}
}

.hub-top-wikis {
	.clearfix {
		overflow: visible;
	}
}


#hub-top-wikis {
  margin-top: 25px;

	h1 {
		font-size: 22px;
		margin: {
			top: 5px;
			bottom: 10px;
		}
		color: #000;
		font-weight: 600;
	}

	#top-wikis-lists-box {
	  width: 620px;
	  margin-top: 20px;
		h2 {
			font-size: 18px;
			line-height: 1em;
			padding: 0;
			margin-top: 1px;
		}

		p {
			padding: 0;
			margin: 0;
			color: #666;
		}

		span {
			&.green-box {
				background-color: #339900;
				color: #fff;
				float: left;
				margin: 0 10px 0 0;
				font: {
					size: 12px;
					weight: bold;
				}
				padding:0 2px;
				text-align:center;
				width:15px;
			}
		}

		.top-wiki-data {
			float: left;
		}
		ul {
			li {
				list-style-type: none;
				padding: 0;
				margin: 0;
				margin-top: 15px;
				min-height: 60px;
				.top-wiki-data {
					width: 560px;
				}
			}

			&#top-wikis-list-1 {
				width: 590px;
				padding: 0;
				margin: 0 10px;
			}
		}
	}
}


#hub-side-box {
	#wikia-global-hot-spots {
		width: 300px;

		.page-activity-sources {
			line-height: 22.5px;
		}
		.hilite {
			.page-activity-sources {
				padding-top: 28px;
			}
		}

		.page-activity-badge {
			margin-right: 4px;
		}

		.page-activity-sources {
			margin-left: 110px;
			padding-top: 0;
		}

		.wikia-page-link {
			font-weight: normal;
		}

		p {
			margin: 0;
		}

		ol {
			li {
				margin: 8px 0;
			}
		}

	}
}


#hub-top-contributors {
	position: inherit !important; // /** @ todo remove important **/
	clear: both;
	h1 {
		margin-bottom: 12px;
	}

	ul {
		padding: 0;
		li {
			list-style-type: none;
			margin: 15px 0;

			img {
				height: 30px;
				width: 30px;
				background-color: white;
				padding: 2px;
				margin: 0 10px 0 0;
				border: 1px solid $color-page-border;
				vertical-align: top;
			}

			span {
				&.h2 {
					display: inline-block;
					font-size: 16px;
					margin: 8px 10px 0 0;
					vertical-align: top;
				}
			}

			.userEditPoints {
				background:#E0E0E0;
				text-transform:uppercase;
				display: inline-block;
				text-align: center;
				overflow: hidden;
				color: #0A0A0A;
				vertical-align: top;
				margin-top: 5px;

				span {
					&.txt {
						font-size: 10px;
						border: {
							color:#AAAAAA #AAAAAA #AAAAAA -moz-use-text-color;
							style:solid solid solid none;
							width: 1px 1px 1px 0;
						}
						background-color: #e0e0e0;
						@include linear-gradient(false, top, #fbfbfb, 20%, #e0e0e0, 70%);
						line-height:17px;
						padding:1px 5px 2px;
						display: inline-block;
					}

					&.userPoints {
						@include linear-gradient(false, top, #fcf297, 20%, #f6dd5d, 70%);
						border: 1px solid #0A0A0A;
						display: inline-block;
						font: {
							weight: bold;
							size: 10px;
						}
						padding: 1px 5px 2px;
						line-height: 17px;

					}
				}
			}
		}
	}
	.toggleContainer {
		margin-top: -8px;
	}
}


// /** Admin CSS **/

.toggleContainer {
	float: right;
	margin: {
		top: -30px;
		right: 5px;
	}
}

.hide-blog {
	background: gray;
}


.printfooter, .emptymwmsg {
	display: none;
}

// /** Search box positioning **/

.buttons .WikiaSearch {
	position: absolute;
	bottom: -10px;
	right: 90px;
	z-index: 99;
}

#wikia-search-submit {
	outline:none\9;
}

// /** Sales menu **/

section.SalesSupportModule {
	padding: 0;
	ul {
	   margin: 0;
	}
	li {
	   padding: 5px;
	}
	li.selected {
	   background: #EEE;
	   color: #000;
	}
}

